cmake_minimum_required(VERSION 3.8)
project(pu_and_su_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()

add_executable(simple_publisher src/simple_publisher.cpp)
add_executable(simple_subscriber src/simple_subscriber.cpp)
add_executable(mix_publisher_01 src/mix_publisher_01.cpp)
add_executable(mix_publisher_02 src/mix_publisher_02.cpp)
add_executable(mix_subscriber_01 src/mix_subscriber_01.cpp)
ament_target_dependencies(simple_publisher rclcpp std_msgs)
ament_target_dependencies(simple_subscriber rclcpp std_msgs)
ament_target_dependencies(mix_publisher_01 rclcpp std_msgs)
ament_target_dependencies(mix_publisher_02 rclcpp std_msgs)
ament_target_dependencies(mix_subscriber_01 rclcpp std_msgs)

install(TARGETS
  simple_publisher
  simple_subscriber
  mix_publisher_01
  mix_publisher_02
  mix_subscriber_01
  DESTINATION lib/${PROJECT_NAME}
)
